syntax = "proto3";

package services;

service CRUDService {
  rpc SavePost(SavePostDTO) returns (PostDTO);
  rpc GetPosts(GetPostsRequest) returns (stream PostDTO);
  rpc DeletePost(DeleteRequest) returns (ErrorResponse);
  rpc UpdatePost(UpdatePostDTO) returns (ErrorResponse);
}

message GetPostsRequest {
  oneof get {
    int64 id = 1;
    int64 user_id = 2;
  }
}

message ContentDTO {
  string title = 1;
  string body = 2;
}

message PostDTO {
  int64 id = 1;
  int64 user_id = 2;
  ContentDTO content = 3;
}

message SavePostDTO {
  int64 user_id = 1;
  ContentDTO content = 2;
}

message UpdatePostDTO {
  int64 id = 1;
  ContentDTO content = 2;
}

message DeleteRequest {
  int64 id = 1;
}

message ErrorResponse {
  string error = 1;
}
